# polymarket-backtesting

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml
.sisyphus/plans/: polymarket-historical-data-library.md  prediction-backtesting-framework.md
examples/: fetch_ohlcv.py  synthetic_orderbook.py
src/pmbacktest/: __init__.py  config.py  data.py  engine.py  execution.py  metrics.py  portfolio.py  pyproject.toml  risk.py  strategies.py  types.py
src/pmdata/: __init__.py  client.py  models.py
src/pmdata/api/: clob.py  gamma.py  subgraph.py
src/pmdata/cache/: base.py  impl.py
src/pmdata/cli/: __init__.py
src/pmdata/synthesis/: ohlcv.py  orderbook.py
tests/pmbacktest/: __init__.py  test_data.py
tests/unit/: test_cache.py  test_cli.py  test_clob_client.py  test_gamma_client.py  test_models.py  test_ohlcv.py  test_orderbook_synthesis.py
