[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-data"
version = "0.1.0"
description = "Python library for retrieving Polymarket historical price data and synthesizing orderbooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "prediction-backtesting" }]
keywords = ["polymarket", "prediction-markets", "historical-data", "orderbook", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "httpx>=0.27,<1",
    "gql[httpx]>=3.5,<4",
    "pandas>=2.1,<3",
    "pyarrow>=15,<20",
    "tenacity>=8.2,<10",
    "click>=8.1,<9",
    "pydantic>=2.5,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "respx>=0.21,<1",
    "ruff>=0.5,<1",
    "mypy>=1.8,<2",
    "pandas-stubs>=2.1",
]

[project.scripts]
pmdata = "pmdata.cli:main"

[project.urls]
Homepage = "https://github.com/prediction-backtesting/polymarket-data"
Repository = "https://github.com/prediction-backtesting/polymarket-data"

[tool.hatch.build.targets.wheel]
packages = ["src/pmdata"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
