[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-backtest"
version = "0.1.0"
description = "Python library for backtesting trading strategies on Polymarket prediction markets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "prediction-backtesting" }]
keywords = ["polymarket", "prediction-markets", "backtesting", "trading-strategies"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "polymarket-data @ file://${workspace_root}/src/pmdata",
    "numpy>=1.26,<2",
    "pandas>=2.1,<3",
    "pydantic>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5,<6",
    "ruff>=0.5,<1",
    "mypy>=1.8,<2",
]

[project.scripts]
pmbacktest = "pmbacktest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pmbacktest"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
